pruebas/nginx-harbor.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-harbor
spec:
  containers:
    - name: nginx
      image: nginx-personalizado
      imagePullPolicy: Never
