pruebas/constraint-block-nonharbor.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredHarbor
metadata:
  name: solo-imagenes-harbor
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
